# jarvis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pipeline.yaml
htmlcov/: class_index.html  coverage_html_cb_d1c4fcc4.js  function_index.html  index.html  status.json  z_9c6e55a4bef45754___init___py.html  z_9c6e55a4bef45754_cli_py.html  z_9c6e55a4bef45754_config_py.html  z_9c6e55a4bef45754_ingest_py.html
jarvis/: fake.py  ingest.py  main.py  main_test.py
jarvis/actions/ingest/: config_ingest_yaml.py  job_parameters.py  run.py
jarvis/actions/ingest/ingest_datacontract/: datacontract.yaml
jarvis/actions/ingest/resource/: config.yaml
jarvis/actions/prep/: run.py
jarvis/azure_objects/: adls.py  credential.py  event_hub.py
jarvis/ci/: cli.py
jarvis/contract/: datacontract.py
jarvis/databricks_objects/: credential.py  find_whl.py  workflow.py
jarvis/utils/: cons.py  helper.py  logger.py  variables.py
tests/: test_azure_credential.py  test_cli.py  test_cons.py  test_databricks_credential.py  test_ingest.py
